Closed
Bug 1464002
Opened 8 years ago
Closed 8 years ago
mips Atomics compareExchange
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla62
People
(Reporter: qiaopengcheng-hf, Assigned: qiaopengcheng-hf)
References
Details
Attachments
(1 file)
|
1.08 KB,
patch
|
lth
:
review+
RyanVM
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux mips64; rv:52.0) Gecko/20100101 Firefox/52.0
Build ID: 20180523145036
Steps to reproduce:
using the javascript function of Atomics.compareExchange.
Actual results:
javascript function of Atomics.compareExchange can not work normally when the typearray is like Int8Array, Uint8Array...
Expected results:
javascript function of Atomics.compareExchange should work normally.
| Assignee | ||
Updated•8 years ago
|
Component: Untriaged → JavaScript Engine
Product: Firefox → Core
| Assignee | ||
Comment 1•8 years ago
|
||
Attachment #8980203 -
Flags: review?(jdemooij)
Updated•8 years ago
|
Attachment #8980203 -
Flags: review?(jdemooij) → review+
| Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Updated•8 years ago
|
Assignee: nobody → qiaopengcheng-hf
Pushed by nbeleuzu@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/cc575c33a610
Implementation error of Atomics.compareExchange on mips. r=lth
Keywords: checkin-needed
Comment 3•8 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 8 years ago
status-firefox62:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Comment 5•7 years ago
|
||
Comment on attachment 8980203 [details] [diff] [review]
mips Atomics compareExchange
Approval Request Comment
[Feature/Bug causing the regression]: 1420838
[User impact if declined]: Affects mips64/mips32 platforms.
[Is this code covered by automated tests?]: Yes.
[Has the fix been verified in Nightly?]: No.
[Needs manual test from QE? If yes, steps to reproduce]: No.
[List of other uplifts needed for the feature/fix]: None.
[Is the change risky?]: No.
[Why is the change risky/not risky?]: Affects only MIPS code.
[String changes made/needed]:
Attachment #8980203 -
Flags: approval-mozilla-beta?
Comment 6•7 years ago
|
||
Comment on attachment 8980203 [details] [diff] [review]
mips Atomics compareExchange
MIPS-only change. Approved for 61.0b12.
Attachment #8980203 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•7 years ago
|
||
| bugherder uplift | ||
status-firefox61:
--- → fixed
Updated•7 years ago
|
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•