Bug 1464002 - Implementation error of Atomics.compareExchange on mips. r=lth